--- a/000.simple-api/back-end/package.json
+++ b/000.simple-api/back-end/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "cors": "^2.8.5"
   }
 }
